--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>My first heading!</h1>
 	<p>My first paragraph!</p>
+	<img alt="My first image is Koala" src="image.jpg"/>
+	<script src="src/index.js"></script>
 </body>
 </html>
